--- a/style.css
+++ b/style.css
@@ -1247,7 +1247,7 @@ input.main-search-input:-ms-input-placeholder {
 ======================= */
 #particles {
   width: 100%;
-  min-height: 800px;
+  min-height: auto;
   background-color: white;
   -webkit-background-size: cover;
   background-size: cover;
@@ -3527,9 +3527,6 @@ footer:before {
 
 /* 767 */
 @media screen and (max-width: 767px) {
-  #particles {
-    min-height: 500px;
-  }
   .hero-area .hero-area-content {
     top: 50%;
   }
