--- a/style.css
+++ b/style.css
@@ -3527,6 +3527,9 @@ footer:before {
 
 /* 767 */
 @media screen and (max-width: 767px) {
+  #particles {
+    padding-top: 50px;
+  }
   .hero-area .hero-area-content {
     top: 50%;
   }
