--- a/src/static/templates/index.html
+++ b/src/static/templates/index.html
@@ -9,6 +9,7 @@
     <title>NeuralWorks</title>
   </head>
   <body>
+    <div id="particles-js"></div>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light p-4">
       <div class="container container-fluid p-0 mw-100">
         <a class="navbar-brand" href="#">
@@ -47,10 +48,46 @@
       <div class="hero"> <!--d-flex align-items-center justify-content-center -->
         <div class="hero-box">
           <h1>Create a better universe.</h1>
-          <button type="button" class="btn btn-primary">Start now</button>
+          <button type="button" class="btn btn-primary">Join now</button>
         </div>
       </div>
-      <div id="particles-js"></div>
+      <div class="container p-5">
+        <div class="container text-center p-5">
+          <h1>So, what is <span>NeuralWorks</span>?</h1>
+          <p class="p-5">NeuralWorks is a student ran community of aspiring entrepreneurs and creators. Meet <span><b>new friends</b></span> and make projects with some of the <span><b>best creators in the world</b></span>!</p>
+        </div>
+        <div class="info row row-cols-2 gx-3 gy-5">
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <h2 class="card-title">Empower Your Learing</h2>
+                <p class="card-text">Surround yourself in an environment of <span><b>like minded people</b></span>. Our members include students and professional developers, <span><b>spanning 6 continents</b></span>.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <img src="../img/group.svg"
+            class="floating"
+            width="250"/>
+          </div>
+          <div class="col">
+            <img src="../img/work.svg"
+            class="floating"
+            width="250"/>
+          </div>
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+              <h2 class="card-title">Award Winning Projects</h2>
+              <p class="card-text">Work with the NeuralWorks team to create new exciting projects. Previous projects have <span><b>won ivy league hackathons</b></span> and been funded.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container container-fluid text-center p-5">
+        <h1>Recent Projects</h1>
+        
+      </div>
     </main>
   </body>
   <script src="../js/particles.js"></script>
