--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -18,7 +18,8 @@ h1,
 h2,
 h3,
 h4,
-h5 {
+h5,
+a {
   color: #333333;
   font-family: "DM Sans", sans-serif;
 }
@@ -87,6 +88,43 @@ nav .nav-item:hover .nav-link,
   border-radius: 100%;
   margin-top: 3rem;
   margin-bottom: 5rem;
+}
+
+footer {
+  padding: 40px 0;
+  background-color: #437085;
+  color: #f8faff;
+}
+
+footer ul {
+  padding: 0;
+  list-style: none;
+  text-align: center;
+  font-size: 1rem;
+  line-height: 1.6;
+  margin-bottom: 0;
+}
+
+footer ul a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+footer ul a:hover {
+  opacity: 1;
+}
+
+footer li {
+  padding: 0 10px;
+}
+
+footer .copyright {
+  margin-top: 1rem;
+  text-align: center;
+  font-size: 0.8rem;
+  color: #aaa;
+  margin-bottom: 0;
 }
 
 /* Animations */
