--- a/src/static/css/style.scss
+++ b/src/static/css/style.scss
@@ -46,7 +46,8 @@ h1,
 h2,
 h3,
 h4,
-h5 {
+h5,
+a {
   color: $black;
   font-family: $dmsans;
 }
@@ -105,6 +106,38 @@ nav,
   border-radius: 100%;
   margin-top: 3rem;
   margin-bottom: 5rem;
+}
+
+footer {
+  padding: 40px 0;
+  background-color: $neuralworks-blue;
+  color: $white;
+  ul {
+    padding: 0;
+    list-style: none;
+    text-align: center;
+    font-size: 1rem;
+    line-height: 1.6;
+    margin-bottom: 0;
+    a {
+      color: inherit;
+      text-decoration: none;
+      opacity: 0.8;
+    }
+    a:hover {
+      opacity: 1;
+    }
+  }
+  li {
+    padding: 0 10px;
+  }
+  .copyright {
+    margin-top: 1rem;
+    text-align: center;
+    font-size: 0.8rem;
+    color: #aaa;
+    margin-bottom: 0;
+  }
 }
 
 /* Animations */
