--- a/src/static/templates/index.html
+++ b/src/static/templates/index.html
@@ -4,15 +4,16 @@
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css" />
     <script src="https://kit.fontawesome.com/0e7cbfa068.js" crossorigin="anonymous"></script>
     <title>NeuralWorks</title>
   </head>
   <body>
     <div id="particles-js"></div>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light p-4">
-      <div class="container container-fluid p-0 mw-100">
-        <a class="navbar-brand" href="#">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light py-4">
+      <div class="container container-fluid py-0 mw-100">
+        <a class="navbar-brand p-3" href="#">
           <img
             src="../img/logo/vector/default-monochrome-black.svg"
             width="250"
@@ -51,10 +52,10 @@
           <button type="button" class="btn btn-primary">Join now</button>
         </div>
       </div>
-      <div class="container p-5">
-        <div class="container text-center p-5">
+      <div class="container py-5">
+        <div class="container text-center py-5">
           <h1>So, what is <span>NeuralWorks</span>?</h1>
-          <p class="p-5">NeuralWorks is a student ran community of aspiring entrepreneurs and creators. Meet <span><b>new friends</b></span> and make projects with some of the <span><b>best creators in the world</b></span>!</p>
+          <p class="py-5">NeuralWorks is a student ran community of aspiring entrepreneurs and creators. Meet <span><b>new friends</b></span> and make projects with some of the <span><b>best creators in the world</b></span>!</p>
         </div>
         <div class="info row row-cols-2 gx-3 gy-5">
           <div class="col">
@@ -84,13 +85,63 @@
           </div>
         </div>
       </div>
-      <div class="container container-fluid text-center p-5">
-        <h1>Recent Projects</h1>
-        
+      <div class="container container-fluid text-center">
+        <h1 class="py-5">Recent Projects</h1>
+        <div class="row flex-row align-items-center py-5">
+          <div class="col">
+            <div class="card" data-aos="fade-up" style="width: 18rem;">
+              <img src="https://media.giphy.com/media/BIQIObEIZv7WkPVqt4/giphy.gif" class="card-img-top" alt="Commit">
+              <div class="card-body">
+                <h4 class="card-title">Commit</h4>
+                <p class="card-text">RU hacks winner. Solving procrastination the right way, permanently!</p>
+                <a href="#" class="btn btn-primary">See more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" data-aos="fade-up" data-aos-delay="300" style="width: 18rem;">
+              <img src="https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_thumbnail_photos/001/487/158/datas/medium.png" class="card-img-top" alt="Photocrypt">
+              <div class="card-body">
+                <h4 class="card-title">Photocrypt</h4>
+                <p class="card-text">Hack Caltech Winner, 1517 Funding Winner. Secure accounts with images, not passwords.</p>
+                <a href="#" class="btn btn-primary">See more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" data-aos="fade-up" data-aos-delay="600" style="width: 18rem;">
+              <img src="https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/software_photos/001/410/418/datas/original.png" width="400" style="text-align:center" class="card-img-top" alt="Cassavea">
+              <div class="card-body">
+                <h4 class="card-title">Lottocoin</h4>
+                <p class="card-text">A cryptocurrency created to solve the biggest problem in FinTech.</p>
+                <a href="#" class="btn btn-primary">See more</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container container-fluid text-center py-5">
+        <h1>Any Questions? <a href="#" style="text-decoration: none;"><span>Email Us</span></a></h1>
       </div>
     </main>
+    <div class="footer-basic">
+      <footer>
+          <ul class="list-inline">
+              <li class="list-inline-item"><a href="#">Home</a></li>
+              <li class="list-inline-item"><a href="#">Services</a></li>
+              <li class="list-inline-item"><a href="#">About</a></li>
+              <li class="list-inline-item"><a href="#">Terms</a></li>
+              <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+          </ul>
+          <p class="copyright">NeuralWorks © 2020</p>
+      </footer>
+  </div>
   </body>
   <script src="../js/particles.js"></script>
   <script src="../js/app.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </html>
