--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -80,3 +80,18 @@ button {
   height: 100vh;
   width: 100vw;
 }
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.main {
+  animation: fadeInAnimation ease 0.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
